--- a/index.html
+++ b/index.html
@@ -1,141 +1,79 @@
-<!DOCTYPE html><html lang="ar" dir="rtl">
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Algeriano_Neo 2026</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-    }/* رأس الصفحة */
-header {
-  background: #111;
-  color: white;
-  padding: 10px 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: relative;
-}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Algeriano_Neo — 2026</title>
 
-/* صورة صغيرة قبل اللوغو */
-.pre-logo-img {
-  width: 45px;
-  height: 45px;
-  margin-left: 10px;
-  border-radius: 8px;
-  object-fit: cover;
-}
-
-/* اللوغو */
-.logo {
-  font-size: 28px;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-/* القائمة */
-nav {
-  display: none;
-  flex-direction: column;
-  background: #222;
-  position: absolute;
-  top: 100%;
-  right: 0;
-  width: 220px;
-  border-radius: 0 0 10px 10px;
-  overflow: hidden;
-}
-
-nav a {
-  color: white;
-  text-decoration: none;
-  padding: 12px;
-  border-bottom: 1px solid #333;
-  font-size: 16px;
-}
-
-nav a:hover {
-  background: #444;
-}
-
-/* زر تفتح وتغلق */
-.menu-btn {
-  font-size: 30px;
-  cursor: pointer;
-  user-select: none;
-}
-
-/* شريط الأخبار */
-.news-bar {
-  background: #222;
-  color: white;
-  padding: 8px;
-  margin-top: 0;
-  overflow: hidden;
-  white-space: nowrap;
-  direction: ltr; /* مهم باش يمشي من اليسار إلى اليمين */
-}
-
-.news-text {
-  display: inline-block;
-  padding-left: 100%;
-  animation: ticker 12s linear infinite;
-  font-size: 18px;
-}
-
-@keyframes ticker {
-  0% { transform: translateX(0); }
-  100% { transform: translateX(-100%); }
-}
-
-footer {
-  background: #111;
-  color: white;
-  text-align: center;
-  padding: 20px 0;
-  margin-top: 40px;
-  font-size: 18px;
-}
-
-  </style>
+    <!-- ربط CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>  <header><!-- صورة قبل اللوغو -->
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Flag_map_of_Algeria.svg/640px-Flag_map_of_Algeria.svg.png" class="pre-logo-img" />
 
-<!-- اللوغو -->
-<div class="logo">Algeriano_Neo</div>
+<body>
 
-<!-- زر القائمة -->
-<div class="menu-btn" onclick="toggleMenu()">☰</div>
+<!-- 🔥 الشريط العلوي -->
+<header>
+    <div class="top-bar">
 
-<!-- القائمة المنسدلة -->
+        <!-- صورة قبل اللوغو -->
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Flag_map_of_Algeria.svg/640px-Flag_map_of_Algeria.svg.png"
+             class="pre-logo-img" alt="map">
+
+        <!-- اللوغو -->
+        <div class="logo">Algeriano_Neo</div>
+
+        <!-- زر القائمة -->
+        <div class="menu-btn" onclick="toggleMenu()">☰</div>
+
+    </div>
+
+    <!-- شريط الأخبار -->
+    <div class="news-bar">
+        <marquee direction="left" scrollamount="6">
+            🔥 أحدث منصة جزائرية تجمع التجارة — الخدمات — الترفيه — السائقين — الصحة — التقنية 🔥
+        </marquee>
+    </div>
+</header>
+
+
+
+<!-- 🔥 القائمة المنسدلة -->
 <nav id="menu">
-  <a href="#">الرئيسية</a>
-  <a href="#">التجارة بوسيط</a>
-  <a href="#">الخدمات</a>
-  <a href="#">الترفيه</a>
-  <a href="#">النقل بالسائقين</a>
-  <a href="#">الصحة</a>
-  <a href="#">قسم المرأة</a>
-  <a href="#">المطاعم</a>
-  <a href="#">العقار</a>
-  <a href="#">التقنية والدروس</a>
-  <a href="#">السفر والسياحة</a>
-  <a href="#">المتجر العام</a>
+    <a href="#">الرئيسية</a>
+    <a href="#">التجارة بوسيط</a>
+    <a href="#">الخدمات</a>
+    <a href="#">الترفيه</a>
+    <a href="#">النقل بالسائقين</a>
+    <a href="#">الصحة</a>
+    <a href="#">قسم المرأة</a>
+    <a href="#">المطاعم</a>
+    <a href="#">العقار</a>
+    <a href="#">التقنية والدروس</a>
+    <a href="#">السفر والسياحة</a>
+    <a href="#">المتجر العام</a>
 </nav>
 
-  </header>  <!-- شريط الأخبار من اليسار إلى اليمين -->  <div class="news-bar">
-    <div class="news-text">مرحبًا بكم في Algeriano_Neo — منصتكم العملاقة متعددة الخدمات 2026 🚀</div>
-  </div>  <footer>
-    جميع الحقوق محفوظة 2026 © Algeriano_Neo
-  </footer>  <script>
-    function toggleMenu() {
-      const menu = document.getElementById("menu");
-      menu.style.display = menu.style.display === "flex" ? "none" : "flex";
-    }
-  </script></body>
+
+
+<!-- 🔥 صفحة الترحيب -->
+<section class="welcome">
+    <h1>مرحبًا بكم في <span>Algeriano_Neo</span></h1>
+    <p>
+        العملاق الجزائري الجديد… يجمع التجارة، الترفيه، الخدمات، الصحة، التوصيل، التقنية،
+        المطاعم، العقار، وكل شيء في منصة واحدة ✨.
+    </p>
+</section>
+
+
+
+<!-- 🔥 الحقوق -->
+<footer>
+    <p>جميع الحقوق محفوظة © 2026 — Algeriano_Neo</p>
+</footer>
+
+
+<!-- ربط JS -->
+<script src="script.js"></script>
+
+</body>
 </html>
